--- a/EX005/EX005-Info.plist
+++ b/EX005/EX005-Info.plist
@@ -31,9 +31,7 @@
 	<key>NSMainNibFile~ipad</key>
 	<string>RotaryProgress_iPad</string>
 	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
+	<array/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
